--- a/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
+++ b/Articles/SFC/Petrini_Teixeira_2020_SFC.tex
@@ -1,4 +1,4 @@
-% Created 2020-11-10 ter 09:58
+% Created 2020-11-11 qua 11:37
 % Intended LaTeX compiler: pdflatex
 \documentclass[11pt]{article}
 \usepackage[utf8]{inputenc}
@@ -54,7 +54,7 @@ Therefore, this model introduces both housing and asset bubbles	on Sraffian supe
 
 
 \section{Introduction}
-\label{sec:orgd72fbcc}
+\label{sec:org5b2e136}
 \label{sec:introduction}
 
 Non-residential investment is the most scrutinized variable in demand-led growth models so that others expenditures play a secondary role \cite{brochier_macroeconomics_2017}.
@@ -102,7 +102,7 @@ Section \ref{sec:Conclusion} offers some concluding remarks while Appendix \ref{
 
 
 \section{Empirical Motivation}
-\label{sec:org3b2e801}
+\label{sec:org1410824}
 \label{sec:empirical}
 A growing body of empirical demand-led literature has evaluated the role of NCC autonomous expenditures.
 \textcite{freitas_pattern_2013} present a growth accounting decomposition fro Brazil from 1970 to 2005 and report the relevance of those expenditures in describing Brazilian GDP growth. \textcite{braga_investment_2018} shows evidence that economic growth and non-residential investment are explained by NCC autonomous expenditures in Brazilian economy from 1962 to 2015. For the U.S., \textcite{girardi_long-run_2016} show that NCC autonomous expenditures have permanent effects on growth rate. 
@@ -134,7 +134,7 @@ On the following subsection, we present some residential investment-related styl
 Next, we analyze the connection between residential investment, real estate inflation and mortgage interest rate during the U.S. housing bubble episode.
 
 \subsection{Residential investment stylized facts}
-\label{sec:org01705bb}
+\label{sec:orge24b152}
 
 As discussed before, both \textcites{green_follow_1997}{leamer_housing_2007} made it clear how important this particular expenditure is to USA business cycle. In this subsection, we show some residential investment stylized facts for the US in more detail.
 
@@ -185,7 +185,7 @@ A brief inspection of Figure \ref{fig:concentration} reveals that the years lead
 Since this asset is mainly acquired for non-speculative reasons, there is a general increase in the demand for properties as final good. The same cannot be said about secondary houses whose concentration/distribution movement is not as marked as in the previous case. Since this type of property is not intended for regular use by its owner, deconcentration of this asset suggests an increase in the demand for properties in the expectation of capital gains\footnote{This increase in demand for secondary houses may indicate --- but is not limited to --- an increase for speculative reasons. A vacation or rental home, for example, are non-speculative uses of a secondary house. Nevertheless, it is argued that there is a connection between secondary houses and speculation with real estate. It worth noting that the wealthiest households are not the main holders of this secoundary houses. According to Figure \ref{fig:concentration}, they accumulate less than 50\% of these properties over the analyzed period (see vertical axis).}.
 
 \subsubsection{Conexão com a subseção seguinte}
-\label{sec:org5fbaf8a}
+\label{sec:org2eb29a0}
 
 
 \begin{itemize}
@@ -193,7 +193,7 @@ Since this asset is mainly acquired for non-speculative reasons, there is a gene
 \end{itemize}
 
 \subsection{Housing bubble and residential investment}
-\label{sec:org677ca67}
+\label{sec:org77ec973}
 
 
 After the Great Recession, the literature have analyzed the macroeconomic relevance of residential investment \cites{leamer_housing_2015}{fiebiger_semi-autonomous_2018}.
@@ -237,10 +237,10 @@ where \(\pi\) stands for house price inflation
 
 
 \section{A Sraffian supermultiplier SFC model with residential investment}
-\label{sec:orgebea1f1}
+\label{sec:org7e26d9d}
 \label{sec:Model}
 \subsection{General equations}
-\label{sec:orgcc9865d}
+\label{sec:orga1af3cb}
 
 Our model is the most parsimonious as possible: a closed capitalist economy without government sector. Output (\(Y\)) is determined by  a fixed combination of a homogeneous labor (\(L\)) input with homogeneous fixed business capital (\(K_f\)). 
 For simplicity, we put technological progress, depreciation and goods inflation aside so investment is presented in net terms and all variables --- except for houses --- are measured in real terms.
@@ -379,7 +379,7 @@ Change in loans     & &$+\Delta L_{k}$&&$+\Delta L_f$& &$-\Delta L$& 0\\
 
 
 \subsection{Firms}
-\label{sec:orgc56880d}
+\label{sec:org2b10239}
 
 In order to produce, firms purchase capital goods (\(-I_f\) in capital account) and hire workers, whom total remuneration is the economy wage bill. 
 Their total profits (\(FT\)) are a residual between sales (\(Y\)) and total wages (\(W\)). 
@@ -440,7 +440,7 @@ r_n = r_g - r_l\cdot\frac{L_{f_{-1}}}{K_f}
 where \(r_g\) and \(r_n\) denotes gross and net profit rate respectively.
 
 \subsection{Banks}
-\label{sec:orgefc543d}
+\label{sec:org3726dcf}
 
 As in most part of SFC literature, banks do not have an active role in this model.
 They create money as credit is demanded and just after they collect deposits \cite{le_bourva_money_1992}. 
@@ -477,10 +477,10 @@ $$
 \end{equation}
 
 \subsection{Households}
-\label{sec:org1efbb51}
+\label{sec:org135a494}
 
 \subsubsection*{Workers}
-\label{sec:orgb72fb87}
+\label{sec:org67e5536}
 As mentioned before, we assume that workers expend (\(C_w\)) what they earn (\(W\)). 
 For simplicity, we consider that wages are the only source of income workers' disposable income (\(YD_{w}\)) and do not have access to consumption loans, so worker' saving (\(S_{hw}\)) are null.
 Therefore, accordingly to our hypothesis, workers' do not hold both net financial and total wealth (\(V_{w}\)).
@@ -505,7 +505,7 @@ V_{w} = 0
 \end{equation}
 
 \subsubsection*{Capitalists}
-\label{sec:orgb37f68b}
+\label{sec:orgaae3957}
 This is the most complex institutional sector of our model. 
 We assume consumption (\(C_k\)) is fully-autonomous and financed by loans (\(L_{k}\)). 
 Disposable income (\(YD_k\)) is the sum of distributed profits and received interests on deposits, net of interests payments
@@ -601,11 +601,11 @@ In the next Section, we present the short-run and fully-adjusted position dynami
 
 
 \section{Short and long-run equilibria}
-\label{sec:orgaf4cf59}
+\label{sec:org72571d8}
 \label{sec:runs}
 In this Section, we show the implications residential investment inclusion into a SSM-SFC model. First, we present the short-run dynamics and then move to the fully-adjusted position (denoted by \(\star\)).
 \subsection{Short-run good market equilibrium}
-\label{sec:org1336991}
+\label{sec:orgd861ff1}
 \label{short}
 
 In this model, real output (equation \ref{_Y}) is the sum of household consumption (equation \ref{_Ct}) and both types of investment (equation \ref{_It}). 
@@ -666,7 +666,7 @@ k = \frac{(1-R)\cdot (1-h_t - \omega)}{h_t + (1-R)\cdot (1-h_t - \omega)}
 \end{equation}
 
 \subsection{Traverse and long-run equilibrium}
-\label{sec:org53bd35c}
+\label{sec:orga0a1308}
 \label{long}
 
 In this subsection, we present medium and long-run equilibrium similar to  \textcite{freitas_growth_2015}\footnote{It is worth mentioning that we addopt a slightly different concept of medium-run from \textcite{freitas_growth_2015}. That is why we chose to refer to is as traverse as usual in SFC literature. \textcite{freitas_growth_2015} describes medium-run as the theoretical moment when expenditures growth rates converges to the NCC growth rate (\(g_{I_h}\) in our case). However, as we employ numerical simulations, that equality could not occur during the traverse. That been said, the medium-run is defined as the moment in which the capacity ratio is not equal to the normal one while the firms' investment is still adjusting according to changes in marginal propensity to invest (\(h\neqh^\star\)).}.
@@ -710,11 +710,21 @@ $$
 \Delta \left(\frac{L_{f}}{K_{f}}\right) = \frac{I_{f} - FU}{K_{f}} - \ell^{\star}_{f}\cdot g^{\star}  = 0
 $$
 
+$$
+    \ell_f^\star = \frac{g^\star\cdot v - \gamma_F\cdot u^\star (1-\omega)}{v\cdot (g^\star - \gamma_F\cdot r_m)}
+$$
 
 \begin{equation}
 \label{firm_ratio}
-l^\star_f = \frac{g^\star\cdot v - \gamma_F\cdot u^\star \cdot (1-\omega)}{v\cdot (g^\star - \gamma_F\cdot r_m)}
+\ell_f^\star = 1 - \gamma_F\left(\frac{r_g^\star - r_m}{g^\star - \gamma_F\cdot r_m}\right)
 \end{equation}
+Thus, replacing equation \ref{firm_ratio} into \ref{_rn} to obtain net profit rate in the fully-adjusted position (see Equation \ref{Long_netprofit_ratio})
+\begin{equation}
+\label{Long_netprofit_ratio}
+r_n^\star = r_g^\star - r_m\cdot \left(1 - \gamma_F\left(\frac{r_g^\star - r_m}{g^\star - \gamma_F\cdot r_m}\right)\right)
+\end{equation}
+
+
 
 Next, we rewrite capitalists autonomous expenditure in terms of residential investment (see Equation \ref{C_kZ}). 
 Then, we  present capitalists' loans to houses stock ratio (Equation \ref{capitalist_ratio}):
@@ -725,7 +735,7 @@ $$
 
 \begin{equation}
 \label{capitalist_ratio}
-l^\star = \frac{R}{1-R}
+\ell^\star = \frac{R}{1-R}
 \end{equation}
 
 The same procedure can be applied to find mortgage to house stock ratio (\(mo^{\star}\), Equation \ref{mortgage_ratio}):
@@ -764,7 +774,7 @@ m\textsuperscript{\(\star\)} = mo\textsuperscript{\(\star\)}\(\cdot\) k\textsupe
 
 
 \section{Numerical Simulations}
-\label{sec:org6195bfb}
+\label{sec:org612035b}
 \label{sec:Experiments}
 \label{sec:Experiments}
 In this Section, we present the results of the following experiments: 
@@ -777,47 +787,47 @@ Our first experiment assess if income distribution has a level effect on output 
 Real estate inflation increase experiment is motivated by recent US experience (from 1992 to 2019) as discussed in Section \ref{sec:empirical} while the last simulation aims to evaluate indebtedness stability.
 Table \ref{tab:param} in Appendix \ref{append:Data} presents the parameters of simulation and Table \ref{ResumoChoques} compare each result to baseline.
 \subsection{Wage-share decrease}
-\label{sec:org428d493}
+\label{sec:orgfecc556}
 \label{sec:Exp1}
 
-A wage-share decrease has a temporary negative impact both in GDP level and capacity utilization rate due to changes on the supermultiplier (see Figure \ref{fig:results_1}).
-So, aggregate demand growth level is temporarily lower than baseline as a result of the lower supermultiplier.
+A wage-share decrease has permanent negative impact on output level --- due to changes on the supermultiplier --- and temporary negative effects on degree of capacity utilization (see Figure \ref{fig:results_1} A).
+So, aggregate demand growth level is temporarily smaller than baseline as a result of the lower supermultiplier.
 As a consequence of this negative level effect, both accumulation growth rate and marginal propensity to invest temporaly decline while NCC autonomous expenditures share on GDP increases.
-Since NCC autonomous expenditure growth rate remains unchanged and its share on GDP increases, aggregate demand grows faster than accumulation rate.
-As a result, capacity utilization is higher than the normal one.
+Since NCC autonomous expenditures growth rate remains unchanged and its share on GDP increases, aggregate demand grows faster than accumulation rate.
+As a result, degree of capacity utilization is higher than the normal one.
 During the traverse, marginal propensity to invest endogenously adjust to discrepancies between actual and normal utilization rates.
 Consequently, non-residential investment growth rate increases faster than aggregate demand.
 This endogenous adjustment process continues as long as actual capacity utilization rate is different from the normal one.
 In summary, we report standards SSM model results:
     (i) marginal propensity to invest decrease is temporally and returns to baseline level;
     (ii) utilization rate moves towards normal one;
-    (iii) supermultiplier decreases and autonomous expenditure share increases due to GDP decline and; 
-    (iv) since autonomous expenditure growth rate does not change, distribution effects on growth rates are temporary. 
+    (iii) supermultiplier decreases and autonomous expenditures share increases due to GDP decline and; 
+    (iv) since autonomous expenditures growth rate does not change, distribution effects on growth rates are temporary. 
 
 
-Despite temporary effects in growth rate, wage-share decrease has a permanent effect in house share on total capital stock (see Equation \ref{k_long} and Figure \ref{fig:results_2}).
+Despite temporary effects in growth rate, wage-share decrease has a permanent effect in house share on total capital stock (see Equation \ref{k_long} and Figure \ref{fig:results_2} B).
 As a consequence of the initially lower accumulation rate, total capital stock also grows at a temporarily lower rate.
 However, since residencial investment growth rate remains unchanged, its share on total capital stock increases.
-Another persistent effect is the higher capitalists' indebtedness compared to baseline despite the profit-share increase.
-This result stems from the negative level effect on profits as a consequence of the negative effect on GDP and subsequent decrease in capitalists' disposable income.
+%Another persistent effect is the higher capitalists' indebtedness compared to baseline despite the profit-share increase.
+This result is explained by the negative level effect on profits as a consequence of the negative effect on GDP and subsequent decrease in capitalists' disposable income.
 In other words, we report a paradox in capitalists attempt to increase their profit share which results a negative effect both on net profits and capitalists' disposable income.
 
 Finally, we also report a persistent effect on firms' balance sheet due to wage-share decrease.
 The negative level effect on GDP implies an already mentioned temporally decrease in marginal propensity to invest.
-As a consequence of the initially lower accumulation rate and higher profit share, firms' loan-to-profit ratio decrease.
-Thus, according to Equation NUMBER, gross and net profit rate remain persistently close to each other (see Figure \ref{fig:results_2} D).
+As a consequence of the initially lower accumulation rate and higher profit share, firms' loan-to-capital ratio decrease.
+Thus, according to Equation \ref{Long_netprofit_ratio}, gross and net profit rate remain persistently close to each other (see Figure \ref{fig:results_2} D).
 Therefore, as profits distribution policy remains the same, firms require less external funding so its indebtedness decreases.
 
 \textbf{Nota:} Farei referência às equações stock/flow quando terminar esta seção
 
-\subsection{Real estate inflation}
-\label{sec:org3fa8318}
+\subsection{Real estate inflation increase}
+\label{sec:orgebc6042}
 \label{sec:Exp2}
 
 
-Real estate inflation implies a higher residential investment growth due to houses own rate of interest decrease.
-As a result, both GDP growth rate and capacity utilization rate increase as well.
-Since firms react to discrepancies between actual and normal utilization rates, non-residential investment growth rate 
+An increase of real estate inflation implies a higher residential investment growth due to houses own rate of interest decrease.
+As a result, both GDP growth rate and degree of capacity utilization increase as well.
+Since firms react to discrepancies between actual and normal degree of capacity utilization rate, non-residential investment growth rate 
 is temporally higher than GDP growth rate due to marginal propensity to invest adjustment.
 Furthermore, capitalists' disposable income also increases as a result of the already mentioned higher GDP growth rate.
 Since loans interest remains unchanged, capitalists' indebtedness ratio decreases.
@@ -829,20 +839,18 @@ In summary, we report SSM standard fully-adjusted position results:
     (ii) marginal propensity to invest remains persistently higher compared to baseline and;
     (iii) utilization rate moves gradually towards the normal one.
 As mentioned before, our model distinctiveness is the existence of two types of capital stocks since households invest as well.
-Besides the usual SSM results, we report some particularities regarding real assets composition.
+
+
 The most distinct result is real houses share decreases on total capital stock as a result of residential investment growth rate increase.
 Although counterintuitive, this result is similar to the conventional paradox of debt.
 This is the case since houses are always equivalent to  mortgage debt.
-
-
 Additionally, this result is in line with SSM literature.
 Firms investment follows capital stock adjustment principle, so a higher firms investment growth rate implies that
-GDP grows faster than residential investment, reducing both the latter share on GDP and
-also the utilization rate.
-In other words, both autonomous expenditures share on GDP --- higher supermultiplier --- and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
-%Finally, it worth noting that real estate inflation also has permanent effects over real stock/flow ratios due to capital gains.
+GDP grows faster than residential investment.
+Thus, both residential investment share on GDP and degree of capacity  utilization decrease.
+In other words, both autonomous expenditures share on GDP and houses share on real assets (see Equation \ref{partial_pi}) decline as a result of the already described non-residential investment positive reaction.
 \subsection{Interest rate increase}
-\label{sec:org380f7c9}
+\label{sec:org900a13e}
 \label{sec:Exp3}
 
 A increase in benchmark interest rate  has a persistent effect on long-run growth rate since houses own interest rate increases as well\footnote{Since we assume null spread on both mortgage and loans interest rate, an increase on deposits interest rate also increases the other ones. As a consequence, banks' net financial wealth remains unchanged.}.
@@ -851,7 +859,7 @@ Compared to the previous experiments, this shock has opposite effects on long-ru
 
 
 In particular, we report a stronger negative effect over both capitalists' and firms' balance sheet than wage-share decrease (see figures \ref{fig:results_1} and \ref{fig:results_2}).
-This result stems from the temporarily stronger decline of GDP growth rate compared to NCC autonomous expenditure growth rate.
+This effect is a result of the temporarily stronger decline of GDP growth rate compared to NCC autonomous expenditure growth rate.
 As a consequence of lower GDP growth rate, mass of profits also decreases.
 Thus, capitalists' disposable income decreases more than debt-financed consumption growth rate.
 Interest rate increase alone is enough to capitalists' indebtedness level to increase, however it is followed by GDP growth rate decrease, so the overall effect is stronger than wage-share decrease experiment (Section \ref{sec:Exp1}).
@@ -874,14 +882,13 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 			\textbf{$g_Z$}  & 0 & + & -  & 0 & + & - \\ \hline
 			\textbf{$u$}  & - & + & -  & 0 & 0 & 0 \\ \hline
 			\textbf{$h$}  & - & + & -  & 0 & + & - \\ \hline
-			\textbf{$k$}  & + & * & +  & + & - & + \\ \hline
+			\textbf{$k$}  & + & - & +  & + & - & + \\ \hline
 			\textbf{$\frac{Z}{Y}$}  & + & - & +  & + & - & + \\ \hline
-			\textit{$\frac{(r_{mo}\cdot DN)}{YD_k}$}  & - & - & +  & - & - & + \\ \hline\hline
+			\textit{$r_m\frac{(D - M)}{K_{HD}}$}  & - & - & +  & - & - & + \\ \hline\hline
 		\end{tabular}%
 	%}
 	\caption*{\textbf{Source:} Authors' Elaboration}
 \end{table}
-
 
 
 \begin{figure}[htb]
@@ -892,7 +899,6 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 	\caption*{\textbf{Source:} Authors' elaboration}
 \end{figure}
 
-
 \begin{figure}[htb]
 	\centering
 	\caption{Experiments simulations (II)}
@@ -902,13 +908,23 @@ Therefore, we find a stable debt dynamics for both capitalists and firms (other 
 \end{figure}
 
 
+
 \subsection{Plugging real data}
-\label{sec:org9622161}
+\label{sec:org12e74c2}
 \label{real_sim}
 
-Finally, we include houses own interest rate data into our model (see Figure \ref{propria_investo}).
+Finally, we include houses own interest rate data into our model as discussed in section \ref{sec:empirical} (see Figure \ref{propria_investo}).
 To do so, each year corresponds to ten simulated periods for visualization reasons.
-Although rudimentary, this procedure allows us to investigate whether or not our model reports the following stylized facts:
+Additionally, we abandoned the fixed share between NCC autonomous expenditures (parameter \(R\)).
+In order to include capitalists consumption without running into asymptotic paths, we defined its growth rate (\(g_{C_k}\)) as the mean of residential investment growth rate from 1992 to 2019 (Equation \ref{gck_real}):
+
+\begin{equation}
+  \label{gck_real}
+  g_{C_k} = \frac{1}{N} \sum_{t=1992}^{2019} g_{I_{h_{t}}}
+\end{equation}
+
+
+Although rudimentary, this procedure allows us to investigate whether or not our model reports some of the stylized facts presented in section \ref{sec:empirical}:
 (i) positive relationship between non-residential investment share and GDP growth rate; (ii) capacity utilization towards the normal one, although quite volatile; (iii) NCC autonomous expenditure lead the business cycle and accumulation growth rate; (iv) residential investment is more volatile than others expenditures.
 Finally, all results are presented in Figure \ref{fig:Realresults_1}.
 
@@ -933,7 +949,7 @@ Together these results provide a first step towards the connection between asset
 
 
 \section{Concluding Remarks}
-\label{sec:org38fcd52}
+\label{sec:org407535f}
 \label{sec:Conclusion}
 This paper contributes to demand-led growth agenda, taking in consideration recent efforts of embedding it in a SFC framework.
 Our novelty is twofold: (i) inclusion of residential investment and (ii) determination of its growth rate by houses' own interest rate.
@@ -958,23 +974,23 @@ For example, future research could assess which institutional arrangements allow
 
 
 \section*{Acknowledgments}
-\label{sec:orgca35161}
+\label{sec:org32fc46c}
 \noindent We  are  grateful  to  Lídia  Brochier,  Carolina  Baltar,  Franklin  Serrano  for  discussions,  as  well  as  comments  by  the participants of Cecon/Unicamp and UFRJ Political Economy research seminars and the participants of XII AKB meeting, 20th FMM forum, and 46th EEA Annual Conference. Any remaining errors are, of course, our own.
 
 \section*{Disclosure statement}
-\label{sec:orgab5f1d3}
+\label{sec:org0d1ed7b}
 No potential conflict of interest was reported by the authors.
 
 
 \section*{References}
-\label{sec:orgb39f2e2}
+\label{sec:orgb790139}
 \printbibliography[heading=none]
 
 
 \appendix
 
 \section{Analytical Solution}
-\label{sec:org31072ac}
+\label{sec:org45e606a}
 \label{append:Solution}
 
 In this appendix, we present the partial derivatives of somes stock/flow ratios.
@@ -1060,7 +1076,7 @@ Since capitalists' loans and mortgage to house ratios (\(\ell^{\star}_{k}\) and 
 \end{equation}
 
 \section{Numerical Appendix}
-\label{sec:org766cdba}
+\label{sec:org237cf05}
 \label{append:Data}
 
 
