--- a/Materias/2S2020/PED_CE342/Turma_A/187323.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/187323.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Seu parágrafo de abertura é uma boa forma de introduzir o problema analisado pelo autor. No parágrafo seguinte, foram pontuados os elementos centrais do monetarismo. Adiante, ao descrever a ilusão monetária, incorreu em uma possível imprecisão. Quando ocorre, o trabalhador compreender aumentos nominais no salário tal como se fossem reais (isso esta na resenha). No entanto, como formam expectativas adaptativas, a informação sobre o nível de preços não é imediatamente corrigida (também esta na resenha). Porém, nada impede que o salário seja menor em termos reais (na resenha esta restrito à correção pela inflação, ou seja, manutenção em termos reais). Em seguida, corretamente apresenta a proposição de política econômica do monetarismo. Adiante, associa essa proposição ao embasamento da TQM. Poderia apenas ter se aprofundado mais nas hipóteses e implicações da TQM (notadamente, estabilidade da demanda por moeda)
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido satisfatoriamente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
