--- a/Materias/2S2020/PED_CE342/Turma_A/206194.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/206194.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Em seu parágrafo inicial, consta que a proposição de políticas monetárias é a principal proposição do monetarismo. Mais precisamente, seria a recomendação de regras monetárias. Mais a frente esclarece esse ponto. O restante desde parágrafo esta um pouco repetitivo e confuso. Adiante pontua os principais elementos da escola monetarista. No parágrafo seguinte associa corretamente a TQM à compreensão das causas da inflação. Poderia apenas ter enfatizado mais a implicação de estabilidade na demanda por moeda. Ao descrever as implicações da ilusão monetária, dá muita atenção aos elementos da demanda (multiplicador). Seria mais adequado focar em fatores do lado da oferta como é o caso da maior oferta de trabalho pelos trabalhadores na leitura de que os salários reais estão aumentando. Logo em seguida é pontuada essa questão pelo lado da oferta. No parágrafo final, dá a entender que os países adotaram a TQM e não regras monetárias.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
