--- a/Materias/2S2020/PED_CE342/Turma_A/206883.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/206883.org
@@ -1,8 +1,8 @@
 #+OPTIONS: toc:nil num:nil tags:nil
-#+TITLE: 221515 - Marcos Baldez Lagoeiro Barroso
+#+TITLE: 206883 - Vinícius Santos Bering da Silva
 #+AUTHOR: Gabriel Petrini (PED)
-#+PROPERTY: RA 221515
-#+PROPERTY: NOME "Marcos Baldez Lagoeiro Barroso"
+#+PROPERTY: RA 206883
+#+PROPERTY: NOME "Vinícius Santos Bering da Silva"
 #+INCLUDE_TAGS: private
 #+PROPERTY: COLUMNS %TAREFA(Tarefa) %OBJETIVO(Objetivo) %CONCEITOS(Conceito) %ARGUMENTO(Argumento) %DESENVOLVIMENTO(Desenvolvimento) %CLAREZA(Clareza) %NOTA(Nota)
 #+PROPERTY: TAREFA_ALL "Resenha 1" "Resenha 2" "Resenha 3" "Resenha 4" "Resenha 5" "Prova" "Seminário"
@@ -22,29 +22,30 @@
 
 * Resenha 1: Monetaristas                                           :private:
   :PROPERTIES:
-  :TAREFA:   Resenha 1
-  :OBJETIVO: Atingido parcialmente
-  :ARGUMENTO: Atingido satisfatoriamente
-  :CONCEITOS: Atingido satisfatoriamente
-  :DESENVOLVIMENTO: Atingido parcialmente
-  :CONCLUSAO: Atingindo minimamente
-  :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingido parcialmente
+  :TAREFA:
+  :OBJETIVO:
+  :ARGUMENTO:
+  :CONCEITOS:
+  :DESENVOLVIMENTO:
+  :CONCLUSAO:
+  :CLAREZA:
+  :NOTA:
   :END:
 
 ** Comentários individuais 
 
-Você corretamente destacou a retomada da TQM enquanto ponto central da escola monetarista e leitura enquanto uma teoria da demanda por moeda. No entanto, pouco avançou ao pontuar as hipóteses associadas a isso. Apesar de correta, a explicação da curva de Phillips vertical esta desconectada do resto do texto. Por fim, não há menção à proposição de adoção de regras monetárias e o que deve ser feito para que a taxa de inflação seja estável a longo prazo.
+Não entregue conforme as instruções.
+
 * Resenha 2: Novos Clássicos                                        :private:
   :PROPERTIES:
   :TAREFA:   Resenha 2
   :OBJETIVO: Atingido parcialmente
   :ARGUMENTO: Atingido parcialmente
-  :CONCEITOS: Atingido satisfatoriamente
-  :DESENVOLVIMENTO: Atingido satisfatoriamente
-  :CONCLUSAO: Atingido satisfatoriamente
-  :CLAREZA:  Atingido parcialmente
-  :NOTA:     Atingido parcialmente
+  :CONCEITOS: Atingindo minimamente
+  :DESENVOLVIMENTO: Atingindo minimamente
+  :CONCLUSAO: Atingindo minimamente
+  :CLAREZA:  Atingindo minimamente
+  :NOTA:     Atingindo minimamente
   :END:
 
 ** Comentários individuais
