--- a/Materias/2S2020/PED_CE342/Turma_A/222615.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/222615.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seu parágrafo de abertura, corretamente contextualizou o monetarismo enquanto paradigma que sucedeu o keynesianismo ortodoxo. Além disso, destacou a importância da conjuntura econômica da década de 70 no debate acerca dos determinantes da inflação. Em relação a esse último ponto, tome nota que o monetarismo teve maior influência nas décadas de 50 e 60. Em seguida, é corretamente pontuada a neutralidade da moeda. No entanto, da forma que esta parece ser uma hipótese e não uma implicação do modelo monetarista. Somando os elementos pontuado na resenha à TQM, obtém-se a neutralidade da moeda e não o inverso. Mais a frente, corretamente recoloca a neutralidade da moeda enquanto resultado. Porém, seria necessário supor (também) que a demanda por moeda seja estável para que tal conclusão seja obtida. No parágrafo seguinte há uma discussão sobre a TQM. Vale destacar que a TQM implica estabilidade e não pressupõe estabilidade.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
