--- a/Materias/2S2020/PED_CE342/Turma_A/240409.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/240409.org
@@ -40,3 +40,18 @@
 ** Comentários individuais 
 
 Em seus parágrafos de abertura, destacou corretamente as implicações da escola monetarista e seu contraponto ao keynesianismo. O mesmo vale para a curva de Phillips aceleracionista e suas antecedentes. Ao explicar o mecanismo que gera inflação, incorreu em algumas imprecisões. Não mencionou que os agentes formam expectativas adaptativas e mencionou que as "expectativas aumentam". Mais precisamente, pode-se dizer que as expectativas são de que os preços aumentem. Um ponto importante também que não apareceu até agora é a da TQM. Uma implicação dela é que a demanda por moeda é estável e, assim, a sequência iniciada pela expansão da demanda agregada se verificaria. Fica aqui o registro de que apresentou as expectativas adaptativas mais adiante. Poderia ter antecipado esta discussão para facilitar a explicação da ilusão monetária. Mais a frente, corretamente destaca as proposições supply-side. Por fim, não houve nenhuma menção à TQM e suas implicações. Este último ponto é o que mais te prejudicou.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: satisfatoriamente
+  :ARGUMENTO: satisfatoriamente
+  :CONCEITOS: satisfatoriamente
+  :DESENVOLVIMENTO: satisfatoriamente
+  :CONCLUSAO: satisfatoriamente
+  :CLAREZA:  parcialmente
+  :NOTA:     satisfatoriamente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
