--- a/Materias/2S2020/PED_CE342/Turma_A/241430.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/241430.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Seu parágrafo de abertura faz uma contextualização histórica e teórica do monetarismo, mas esta um pouco redundante em alguns pontos. Em seguida, descreve corretamente o conceito de taxa natural de desemprego, mas poderia ter sido um pouco mais preciso (especialmente quando diz "ações humanas"). Adiante, propõe uma problematização das proposições de política econômica a la monetaristas. No parágrafo seguinte é pontuado que o aumento no estoque de moeda implica maiores taxas de inflação. No entanto, não é feita uma mediação entre esta discussão e a anterior bem como não é argumentado o porquê desta relação de causalidade. Uma forma de mediar essa discussão é por meio da TQM, até então não analisada. Em seguida, descreve corretamente a ilusão monetária e sua relação com inflação surpresa e expectativas adaptativas. Depois, faz um contraponto do monetarismo à escola precedente inclui a discussão da TQM. Neste ponto, poderia ter se aprofundado mais em suas hipóteses e implicações (especialmente estabilidade na demanda por moeda). Mais a frente essa discussão aparece, mas não ocupa um papel de destaque na argumentação. Encerra a resenha fazendo uma contextualização da perda de capacidade explicativa do monetarismo.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido satisfatoriamente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
