--- a/Materias/2S2020/PED_CE342/Turma_A/244321.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/244321.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seus parágrafos iniciais, destacou os elementos centrais do monetarismo. Apesar de não ser indispensável, seria interessante contextualizar esta escola (seja historicamente, seja em contraposição a outra e por ai vai). Adiante, expõe corretamente o conceito de taxa natural de desemprego. Ao descrever as curva de Phillips, incorre em algumas imprecisões. Apenas para exemplificar, diz que a ilusão monetária faz com que a taxa de desemprego oscile em torno da natural. Apesar de estar, no limite, correta poderia ter se aprofundado no porquê ocorre tal descolamento assim como descrever o que é esse fenômeno. Mais ao fim vi que contextualiza o monetarismo enquanto contraponto ao keynesianismo ortodoxo. Por fim, vale destacar que mal discorreu sobre a TQM e suas implicações.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido parcialmente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
