--- a/Materias/2S2020/PED_CE342/Turma_A/244379.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/244379.org
@@ -35,3 +35,19 @@
 ** Comentários individuais 
 
 Em seus parágrafos iniciais, deu muita ênfase à taxa natural de desemprego. Suas colocações estão corretas, mas podem ter te afastado do objetivo da resenha (monetaristas e sua proposição de política monetária). De toda forma, fica o registro que atualizou essa discussão para a economia brasileira recente. Apenas tome nota que nem todos os que defendiam a reforma trabalhista eram monetaristas (talvez se encaixem em outra escola que ainda veremos). Mais a frente, corretamente associou a ilusão monetária à TQM e as expectativas adaptativas. No entanto, poderia ter se aprofundado mais nas hipóteses e implicações da TQM. Essa discussão é feita em seu parágrafo final. Poderia ter organizado melhor a sequência de ideias. Do jeito que esta pareceu não ter uma conclusão.
+
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido parcialmente
+  :DESENVOLVIMENTO: Atingido satisfatoriamente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido parcialmente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
