--- a/Materias/2S2020/PED_CE342/Turma_A/245212.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/245212.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Seu parágrafo de contextualização esta bom e o mesmo vale para a apresentação da tese monetarista. Sua apresentação da TQM esta bastante clara, mas poderia evidenciar melhor que implica estabilidade na demanda por moeda. Adiante, corretamente expôs as contribuições monetaristas na elaboração da Curva de Phillips Expectacional. De modo geral, tenho pouco a comentar sobre sua resenha. Bom trabalho!
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido totalmente
+  :ARGUMENTO: Atingido totalmente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido totalmente
+  :CONCLUSAO: Atingido totalmente
+  :CLAREZA:  Atingido totalmente
+  :NOTA:     Atingido totalmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado.
