--- a/Materias/2S2020/PED_CE342/Turma_A/245459.org
+++ b/Materias/2S2020/PED_CE342/Turma_A/245459.org
@@ -35,3 +35,18 @@
 ** Comentários individuais 
 
 Seu parágrafo de abertura deixa claro que o monetarismo é um contraponto ao Keynesianismo ortodoxo. No parágrafo seguinte, aos expor as ideias de Keynes, menciona que a moeda tem pouca importância. Isso pode ser verdade para o Keynesianismo ortodoxo, mas não para Keynes (ao menos na TG). No parágrafo seguinte ficou mais claro o que quis dizer. No entanto, essa discussão pode ter desviado o objetivo da resenha. A seguir, descreve corretamente os determinantes da demanda por moeda tal como pela TQM monetarista. Poderia ter ressaltado melhor a implicação dessas hipóteses: demanda por moeda é estável. Pelo que entendi da explicação sobre a curva de Phillips aceleracionista (caligrafia complicou um pouco, admito), corretamente associou a proposição de política econômica à TQM tendo em vista os efeitos de curto prazo da política monetária. Ao fim, conectou as proposições monetaristas às recomendações do lado da oferta.
+* Resenha 2: Novos Clássicos                                        :private:
+  :PROPERTIES:
+  :TAREFA:   Resenha 2
+  :OBJETIVO: Atingido parcialmente
+  :ARGUMENTO: Atingido satisfatoriamente
+  :CONCEITOS: Atingido satisfatoriamente
+  :DESENVOLVIMENTO: Atingido parcialmente
+  :CONCLUSAO: Atingido parcialmente
+  :CLAREZA:  Atingido satisfatoriamente
+  :NOTA:     Atingido parcialmente
+  :END:
+
+** Comentários individuais
+
+   Foram includos no documento enviado. Vale pontuar que passou 15 palavras do limite estipulado. 
